--- a/library.html
+++ b/library.html
@@ -38,6 +38,11 @@
 				<p>
 					Copyright (c) 2013-2015 CoreTweet Development Team
 				</p>
+				
+				<h3><a href="https://github.com/chitoku-k/NowPlayingLib">NowPlayingLib</a></h3>
+				<p>
+					Copyright (c) 2015 Chitoku
+				</p>
 
 				<h3><a href="http://www.newtonsoft.com/json">Newtonsoft.Json</a></h3>
 				<p>
