--- a/help.html
+++ b/help.html
@@ -35,7 +35,7 @@
 				</div>
 
 				<h3>作者について</h3>
-				<p>Liberfy for Windowsの作者の連絡先は <a href="https://twitter.com/atst_96">twitter@atst_96</a>です。<br>また、Liberfyの公式アカウントは <a href="https://twitter.com/Liberfy">twitter@liberfy</a> です。</p>
+				<p>Liberfy for Windowsの作者の連絡先は <a href="https://twitter.com/atst_96">twitter@atst_96</a>です。</p>
 
 				<h3>Bot機能について</h3>
 				<p>Bot機能を搭載する予定はありません。</p>
