--- a/help.html
+++ b/help.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 <body>
-	<div id="header">
+	<div id="header" class="yellow">
 		<div class="wrapper">
 			<div id="header-title">
 				<span>Liberfy for Windows</span>
@@ -40,8 +40,8 @@
 				<h3>Bot機能について</h3>
 				<p>Bot機能を搭載する予定はありません。</p>
 
-				<h3>Internet Explorerでコールバック認証が失敗する、または"待機中"のまま進まない。</h3>
-				<p>Internet Explorerのリクエスト送受信の仕様上、コールバック認証が失敗することがあります。Internet Explorerでページを更新して情報を再送信すると、認証が成功することがあります。何度も失敗する場合はお手数ですが、PINコード認証または他のブラウザでのコールバック認証をご利用ください。現時点でChromeやFirefoxではこのような不具合は確認されていません。</p>
+				<s><h3>Internet Explorerでコールバック認証が失敗する、または"待機中"のまま進まない。</h3>
+				<p>Internet Explorerのリクエスト送受信の仕様上、コールバック認証が失敗することがあります。Internet Explorerでページを更新して情報を再送信すると、認証が成功することがあります。何度も失敗する場合はお手数ですが、PINコード認証または他のブラウザでのコールバック認証をご利用ください。現時点でChromeやFirefoxではこのような不具合は確認されていません。</p></s>
 
 				<h3>ライセンスの表記に不備がある</h3>
 				<p>作者はライセンスについてあまり詳しくないので、不備があればご連絡いただけると幸いです。</p>
@@ -49,6 +49,10 @@
 				<h3>ソースコードを公開して欲しい</h3>
 				<p>バージョン1.0.0.0以降からソースコードを整理したのち公開する予定です。</p>
 			</div>
+			
+			<footer>
+				<span id="copyright">Copyright (c) 2015-2016 atst All Rights Reserved.</span>
+			</footer>
 		</div>
 	</div>
 </body>
