--- a/info.html
+++ b/info.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 <body>
-	<div id="header">
+	<div id="header" class="blue">
 		<div class="wrapper">
 			<div id="header-title">
 				<span>Liberfy for Windows</span>
@@ -33,19 +33,25 @@
 				<div class="article-content">
 					<div class="article-item">
 						<img class="right" src="./images/info_mp4.png" alt="">
-						<h3>MP動画のアップロードが可能</h3>
-						<span>画像と同じようにでツイートにMP4動画を添付することができます。<br>※ 動画の解像度が1280×720以下、かつフレームレートが40fps以下、長さが30秒以内である必要があります。</span>
+						<h3>MP4動画のアップロード</h3>
+						<span>画像と同じようにでツイートにMP4動画を添付することができます。<br>※ 動画の解像度が1280×720以下、かつフレームレートが40fps以下、長さが30秒以内である必要があります。<a href="https://dev.twitter.com/rest/media/uploading-media#videorecs" target="_blank">[詳細]</a></span>
 					</div>
 
 					<div class="article-item">
-						<img src="./images/info_notification.png" alt="" class="left">
-						<h3>バルーン通知</h3>
-						<span>通知音とバルーン通知を組み合わせることで、他のユーザからのアクションを瞬時に把握できます。</span>
+						<!--<img src="./images/info_notification.png" alt="" class="left">-->
+						<h3>バルーンと音声での通知</h3>
+						<span>バルーンや音声通知で、他の作業をしながら、リプライやフォロー、リツイートなどを把握することができます。</span>
+					</div>
+
+					<div class="article-item">
+						<h3>自動起動と常駐</h3>
 					</div>
 				</div>
 			</div>
-
 			
+			<footer>
+				<span id="copyright">Copyright (c) 2015-2016 atst All Rights Reserved.</span>
+			</footer>
 		</div>
 	</div>
 </body>
