--- a/index.html
+++ b/index.html
@@ -8,24 +8,6 @@
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 <body>
-	<div id="header">
-		<div class="wrapper">
-			<div id="header-title">
-				<span>Liberfy for Windows</span>
-			</div>
-
-			<div id="menu-navigator">
-				<ul>
-					<li><a class="active" href="./">トップ</a></li>
-					<li><a href="./download.html">ダウンロード</a></li>
-					<li><a href="./library.html">ライブラリ</a></li>
-					<li><a href="./info.html">機能</a></li>
-					<li><a href="./help.html">ヘルプ</a></li>
-				</ul>
-			</div>
-		</div>
-	</div>
-
 	<div id="content">
 		<div class="wrapper">
 			<div id="ss_header">
@@ -37,7 +19,8 @@
 					<br><br>
 
 					<span id="app_desc">
-						Liberfy for Windows は、C#で開発されたTwitterクライアントアプリケーションです。
+						Liberfy for Windows は、C#とWPFで開発された<br>
+						<sub>(今のところ)</sub>Windows向けのTwitterクライアントアプリケーションです。
 					</span>
 				</div>
 			</div>
@@ -45,21 +28,25 @@
 			<ul id="main-menu">
 				<li class="menu-download">
 					<a href="./download.html"><h2><span class="fa fa-download"></span>ダウンロード</h2></a>
-					<span>最新バージョンから過去のバージョンまでダウンロードできます</span>
+					<span>最新バージョンのダウンロードと過去バージョンの更新履歴</span>
 				</li>
 				<li class="menu-library">
 					<a href="./library.html"><h2><span class="fa fa-code"></span>ライブラリ</h2></a>
 					<span>Liberfy for Windowsで使用しているライブラリの一覧です</span>
 				</li>
 				<li class="menu-spec">
-					<a href="./info.html"><h2><span class="fa fa-info-circle"></span>機能</h2></a>
+					<a href="./info.html"><h2><span class="fa fa-info-circle"></span>機能の紹介</h2></a>
 					<span>Liberfyの便利な機能のご紹介</span>
 				</li>
 				<li class="menu-qna">
 					<a href="./help.html"><h2><span class="fa fa-question-circle"></span>ヘルプ</h2></a>
-					<span>Q&A等</span>
+					<span>Q＆A、よくありそうな質問 など</span>
 				</li>
 			</ul>
+
+			<footer style="padding-top: 36px;">
+				<span id="copyright">Copyright (c) 2015-2016 atst All Rights Reserved.</span>
+			</footer>
 		</div>
 	</div>
 </body>
